# learnopengl

./: CMakeLists.txt  camera.h  common.h  fragment_shader.glsl  hellotriangle.cpp  hellowindow.cpp  shader.cc  shader.h  shaders.cpp  textures.cpp  transformations.cpp  vertex_shader.glsl
cpp/: common.cpp  hellotriangle.cpp  hellowindow.cpp  opengl.h  shader.h  textures.cpp  transformations.cpp
cpp/glad/include/glad/: glad.h
cpp/glad/src/: glad.c
python/: requirements.txt
python/1-getting-started/: 1-hello_window.py  2-hello_triangle.py  3-hello_triangle_indexed.py  3.1-shaders-uniform.py  3.2-shaders-interpolation.py
python/1-getting-started/3.3-shaders-class/: 3.3-shaders-class.py  shader.fs  shader.vs
